--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 
 a {
 	text-decoration: none;
+	color: #5f6368;
 }
 
 body {
@@ -18,13 +19,13 @@ body {
 }
 
 .container {
-  margin-top: 20%;
+  margin-top: 32%;
 	margin-left: auto;
 	margin-right: auto;
 	padding-top: 20px;
 	padding-left: 20px;
 	width: 480px;
-	height: 135px;
+	height: 150px;
 	background-color: #fff;
 	border-radius: 10px;
 	/*box-shadow: 0px 0px 4px rgba(0,0,0,5);*/
