--- a/main.css
+++ b/main.css
@@ -19,13 +19,13 @@ body {
 }
 
 .container {
-  margin-top: 80px;
+  	margin-top: 80px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-top: 20px;
 	padding-left: 20px;
+	padding-bottom: 20px;
 	width: 480px;
-	height: 150px;
 	background-color: #fff;
 	border-radius: 10px;
 	/*box-shadow: 0px 0px 4px rgba(0,0,0,5);*/
@@ -42,6 +42,12 @@ body {
 header > h1{
 	/*font-weight: bold;*/
 	color: #202124;
+}
+
+tt {
+	background: linear-gradient(90deg, rgba(0,94,255,1) 0%, rgba(0,246,255,1) 100%);
+	color: white;
+	font-size: 10px;
 }
 
 /*
