--- a/main.css
+++ b/main.css
@@ -14,17 +14,17 @@ body {
   position: fixed;
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #fff;
-	filter: blur(5px);*/
-	background: linear-gradient(90deg, rgba(0,94,255,1) 0%, rgba(0,246,255,1) 100%);
+	filter: blur(5px);
+	background: linear-gradient(90deg, rgba(0,94,255,1) 0%, rgba(0,246,255,1) 100%);*/
+	background-color: #202124;
 }
 
 .container {
-  	margin-top: 80px;
+  	margin-top: 120px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-top: 20px;
 	padding-left: 20px;
-	padding-bottom: 20px;
 	width: 480px;
 	background-color: #fff;
 	border-radius: 10px;
@@ -47,7 +47,23 @@ header > h1{
 tt {
 	background: linear-gradient(90deg, rgba(0,94,255,1) 0%, rgba(0,246,255,1) 100%);
 	color: white;
-	font-size: 10px;
+	font-size: 12px;
+}
+
+pre {
+	margin-left: -20px;
+	background: linear-gradient(90deg, rgb(218, 123, 143) 0%,rgb(228, 174, 73) 100%);
+	color: white;
+	font-size: 12px;
+}
+
+footer {
+	background-color: #e6e6e6;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-bottom: 20px;
+	margin-left: -20px;
+	border-radius: 0 0 10px 10px;
 }
 
 /*
