--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+@media screen and (max-width: 800px) {
+	.container {
+		padding-top: 20px;
+		padding-left: 20px;
+		width: 100vw;
+		background-color: #fff;
+	}
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -19,16 +28,18 @@ body {
 	background-color: #202124;
 }
 
-.container {
-  	margin-top: 120px;
-	margin-left: auto;
-	margin-right: auto;
-	padding-top: 20px;
-	padding-left: 20px;
-	width: 480px;
-	background-color: #fff;
-	border-radius: 10px;
+@media screen and (min-width: 800px) {
+	.container {
+  		margin-top: 120px;
+		margin-left: auto;
+		margin-right: auto;
+		padding-top: 20px;
+		padding-left: 20px;
+		width: 480px;
+		background-color: #fff;
+		border-radius: 10px;
 	/*box-shadow: 0px 0px 4px rgba(0,0,0,5);*/
+	}
 }
 
 .container > ul{
