--- a/main.css
+++ b/main.css
@@ -1,9 +1,17 @@
 @media screen and (max-width: 800px) {
 	.container {
+		max-block-size: 800px;
+		min-width: 320px;
 		padding-top: 20px;
 		padding-left: 20px;
-		width: 100vw;
 		background-color: #fff;
+	}
+
+	pre {
+		margin-left: -20px;
+		background: linear-gradient(90deg, rgb(218, 123, 143) 0%,rgb(228, 174, 73) 100%);
+		color: white;
+		font-size: 2.3vw;
 	}
 }
 
@@ -30,12 +38,12 @@ body {
 
 @media screen and (min-width: 800px) {
 	.container {
+		width: 480px;
   		margin-top: 120px;
 		margin-left: auto;
 		margin-right: auto;
 		padding-top: 20px;
 		padding-left: 20px;
-		width: 480px;
 		background-color: #fff;
 		border-radius: 10px;
 	/*box-shadow: 0px 0px 4px rgba(0,0,0,5);*/
@@ -61,11 +69,13 @@ tt {
 	font-size: 12px;
 }
 
-pre {
-	margin-left: -20px;
-	background: linear-gradient(90deg, rgb(218, 123, 143) 0%,rgb(228, 174, 73) 100%);
-	color: white;
-	font-size: 12px;
+@media screen and (min-width: 800px) {
+	pre {
+		margin-left: -20px;
+		background: linear-gradient(90deg, rgb(218, 123, 143) 0%,rgb(228, 174, 73) 100%);
+		color: white;
+		font-size: 12px;
+	}
 }
 
 footer {
