--- a/main.css
+++ b/main.css
@@ -14,6 +14,13 @@
 		color: white;
 		font-size: 2.3vw;
 	}
+
+	img {
+		margin-bottom: 10px;
+		margin-left: -12px;
+		min-width: 320px;
+		max-width: 100%;
+	}
 }
 
 * {
@@ -40,14 +47,21 @@ body {
 @media screen and (min-width: 800px) {
 	.container {
 		width: 480px;
-  		margin-top: 120px;
+  		margin-top: 20vw;
 		margin-left: auto;
 		margin-right: auto;
 		padding-top: 20px;
 		padding-left: 20px;
 		background-color: #fff;
 		border-radius: 10px;
+		margin-bottom: 2.3vw;
 	/*box-shadow: 0px 0px 4px rgba(0,0,0,5);*/
+	}
+
+	img {
+		margin-bottom: 10px;
+		margin-left: -20px;
+		width: 500px;
 	}
 }
 
