--- a/main.css
+++ b/main.css
@@ -46,10 +46,15 @@ body {
 
 @media screen and (min-width: 800px) {
 	.container {
+		position: absolute;               /* 2 */
+		top: 50%;
+		left: 50%;
+		margin-right: -50%;
+		transform: translate(-50%, -50%);
+
 		width: 480px;
-  		margin-top: 20vw;
-		margin-left: auto;
-		margin-right: auto;
+		/*margin-left: auto;
+		margin-right: auto;*/
 		padding-top: 20px;
 		padding-left: 20px;
 		background-color: #fff;
