--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 @media screen and (max-width: 800px) {
 	.container {
+		font-size: 150%;
 		max-block-size: 800px;
 		min-width: 320px;
 		padding-top: 20px;
@@ -46,13 +47,14 @@ body {
 
 @media screen and (min-width: 800px) {
 	.container {
+		font-size: 150%;
 		position: absolute;               /* 2 */
 		top: 50%;
 		left: 50%;
 		margin-right: -50%;
 		transform: translate(-50%, -50%);
 
-		width: 480px;
+		width: 720px;
 		/*margin-left: auto;
 		margin-right: auto;*/
 		padding-top: 20px;
