--- a/main.css
+++ b/main.css
@@ -39,8 +39,9 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #fff;
 	filter: blur(5px);
-	background: linear-gradient(90deg, rgba(0,94,255,1) 0%, rgba(0,246,255,1) 100%);*/
-	background-color: #202124;
+	background: linear-gradient(90deg, rgba(0,94,255,1) 0%, rgba(0,246,255,1) 100%);
+	background-color: #202124;*/
+	background: linear-gradient(90deg, #4b3136 0%,#423a2b 100%);
 }
 
 @media screen and (min-width: 800px) {
