--- a/main.css
+++ b/main.css
@@ -108,6 +108,7 @@ tt {
 		color: white;
 		font-size: 17.7px;
 	}
+
 	#grad {
 		padding-top: 12px;
 		border-radius: 10px 10px 0 0;
@@ -116,6 +117,10 @@ tt {
 		font-size: 17.7px;
 		height: 24px;
 	}
+
+	footer {
+		border-radius: 0 0 12px 12px;
+	}
 }
 
 footer {
@@ -123,7 +128,6 @@ footer {
 	padding-top: 10px;
 	padding-left: 10px;
 	padding-bottom: 20px;
-	border-radius: 0 0 12px 12px;
 }
 
 /*
