--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@
 		height: 24px;
 	}
 
-	#grad {
+	#gradient {
 		padding: 24px 24px 24px 0;
 		background: linear-gradient(90deg, rgb(218, 123, 143) 0%,rgb(228, 174, 73) 100%);
 		color: white;
@@ -62,7 +62,7 @@ body {
 		margin-right: -50%;
 		transform: translate(-50%, -50%);
 
-		width: 720px;
+		width: 600px;
 		/*margin-left: auto;
 		margin-right: auto;*/
 		background-color: #ffffff;
@@ -84,8 +84,13 @@ body {
 }
 
 .container > p, li {
-	padding-left: 20px;
+	padding-top: 2px;
+	padding-left: 30px;
 	color: #5f6368;
+}
+
+.container > h3{
+	padding-left: 20px;
 }
 
 header > h1{
@@ -109,7 +114,7 @@ tt {
 		font-size: 17.7px;
 	}
 
-	#grad {
+	#gradient {
 		padding-top: 12px;
 		border-radius: 10px 10px 0 0;
 		background: linear-gradient(90deg, rgb(218, 123, 143) 0%,rgb(228, 174, 73) 100%);
@@ -126,7 +131,7 @@ tt {
 footer {
 	background-color: #e6e6e6;
 	padding-top: 10px;
-	padding-left: 10px;
+	text-align: center;
 	padding-bottom: 20px;
 }
 
