--- a/main.css
+++ b/main.css
@@ -5,8 +5,8 @@
 
 @media screen and (max-width: 800px) {
 	.container {
-		font-size: 150%;
-		max-block-size: 800px;
+		font-size: 180%;
+		/*max-block-size: 800px;*/
 		min-width: 320px;
 		padding-top: 20px;
 		background-color: #fff;
@@ -63,15 +63,17 @@ body {
 @media screen and (min-width: 800px) {
 	.container {
 		font-size: 150%;
-		position: absolute;               /* 2 */
+		/*position: absolute;
 		top: 50%;
 		left: 50%;
 		margin-right: -50%;
 		transform: translate(-50%, -50%);
+		width: 600px;*/
+
+		margin-top: 2.3vw;
 		width: 600px;
-		/*width: 600px;
 		margin-left: auto;
-		margin-right: auto;*/
+		margin-right: auto;
 		background-color: #ffffff;
 		border-radius: 12px;
 		margin-bottom: 2.3vw;
@@ -97,6 +99,15 @@ body {
 }
 
 .container > h3{
+	padding-left: 20px;
+}
+
+						/* specs */
+#specs > h4{
+	padding-left: 55px;
+}
+
+#specs > h3{
 	padding-left: 20px;
 }
 
@@ -143,6 +154,7 @@ tt {
 	}
 }
 
+						/* footer */
 footer {
 	background-color: #e6e6e6;
 	padding-top: 10px;
