--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @media screen and (max-width: 800px) {
@@ -34,12 +35,12 @@
 		height: 12px;
 	}
 
-	img {
+	/*img {
 		margin-bottom: 10px;
 		margin-left: -12px;
 		min-width: 320px;
 		max-width: 100%;
-	}
+	}*/
 }
 
 a {
@@ -107,8 +108,17 @@ body {
 	padding-left: 55px;
 }
 
+#specs > h1{
+	text-align: center;
+	margin-bottom: 20px;
+}
+
 #specs > h3{
 	padding-left: 20px;
+}
+
+#specs {
+	padding: 20px;
 }
 
 header > h1{
