--- a/main.css
+++ b/main.css
@@ -64,14 +64,14 @@ body {
 @media screen and (min-width: 800px) {
 	.container {
 		font-size: 150%;
-		/*position: absolute;
+		position: absolute;
 		top: 50%;
 		left: 50%;
 		margin-right: -50%;
 		transform: translate(-50%, -50%);
-		width: 600px;*/
+		width: 600px;
 
-		margin-top: 2.3vw;
+		/*margin-top: 2.3vw;*/
 		width: 600px;
 		margin-left: auto;
 		margin-right: auto;
