--- a/main.css
+++ b/main.css
@@ -1,10 +1,17 @@
+/*			Root			*/
 * {
 	margin: 0;
 	padding: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-@media screen and (max-width: 800px) {
+a {
+	text-decoration: none;
+	color: #5f6368;
+}
+
+/*			Mobile			*/
+@media screen and (max-width: 768px) {
 	.container {
 		font-size: 180%;
 		/*max-block-size: 800px;*/
@@ -43,25 +50,8 @@
 	}*/
 }
 
-a {
-	text-decoration: none;
-	color: #5f6368;
-}
-
-body {
-	/*background: url(bg.jpg);
-  background-size: cover;
-  position: fixed;
-	font-family: Arial, Helvetica, sans-serif;
-	background-color: #fff;
-	filter: blur(5px);
-	background: linear-gradient(90deg, rgba(0,94,255,1) 0%, rgba(0,246,255,1) 100%);
-	background-color: #202124;
-	background: linear-gradient(90deg, #4b3136 0%,#423a2b 100%);*/
-	background-color: #dce1e6;
-}
-
-@media screen and (min-width: 800px) {
+/*			Desktop			*/
+@media screen and (min-width: 769px) {
 	.container {
 		font-size: 150%;
 		position: absolute;
@@ -69,9 +59,6 @@ body {
 		left: 50%;
 		margin-right: -50%;
 		transform: translate(-50%, -50%);
-		width: 600px;
-
-		/*margin-top: 2.3vw;*/
 		width: 600px;
 		margin-left: auto;
 		margin-right: auto;
@@ -86,54 +73,7 @@ body {
 		margin-left: -20px;
 		width: 500px;
 	}
-}
 
-.container > ul{
-	padding-left: 20px;
-	margin-left: 40px;
-}
-
-.container > p, li {
-	padding-top: 2px;
-	padding-left: 30px;
-	color: #5f6368;
-}
-
-.container > h3{
-	padding-left: 20px;
-}
-
-						/* specs */
-#specs > h4{
-	padding-left: 55px;
-}
-
-#specs > h1{
-	text-align: center;
-	margin-bottom: 20px;
-}
-
-#specs > h3{
-	padding-left: 20px;
-}
-
-#specs {
-	padding: 20px 20px 70px 20px;
-}
-
-header > h1{
-	padding-left: 20px;
-	/*font-weight: bold;*/
-	color: #202124;
-}
-
-tt {
-	background: linear-gradient(90deg, rgba(0,94,255,1) 0%, rgba(0,246,255,1) 100%);
-	color: white;
-	font-size: 12px;
-}
-
-@media screen and (min-width: 800px) {
 	pre {
 		padding-top: 12px;
 		border-radius: 10px;
@@ -164,7 +104,59 @@ tt {
 	}
 }
 
-						/* footer */
+header > h1{
+	padding-left: 20px;
+	/*font-weight: bold;*/
+	color: #202124;
+}
+
+body {
+	/*background: url(bg.jpg);
+  	background-size: cover;
+  	position: fixed;
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: #fff;
+	filter: blur(5px);
+	background: linear-gradient(90deg, rgba(0,94,255,1) 0%, rgba(0,246,255,1) 100%);
+	background-color: #202124;
+	background: linear-gradient(90deg, #4b3136 0%,#423a2b 100%);*/
+	background-color: #dce1e6;
+}
+
+.container > ul{
+	padding-left: 20px;
+	margin-left: 40px;
+}
+
+.container > p, li {
+	padding-top: 2px;
+	padding-left: 30px;
+	color: #5f6368;
+}
+
+.container > h3{
+	padding-left: 20px;
+}
+
+/*			block			*/
+#block > h4{
+	padding-left: 55px;
+}
+
+#block > h1{
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+#block > h3{
+	padding-left: 20px;
+}
+
+#block {
+	padding: 20px 20px 20px 20px;
+}
+
+/*			footer			*/
 footer {
 	background-color: #e6e6e6;
 	padding-top: 10px;
@@ -172,34 +164,7 @@ footer {
 	padding-bottom: 20px;
 }
 
-/*
-header {
-	text-align: center;
-}
-
-header > a {
-	font-weight: bold;
-	font-size: 24px;
-	color: #FFF;
-}
-
-.author {
-	margin-top: 10px;
-	font-size: 20px;
-}
-
-.player {
-	margin-top: 25px;
-	text-align: center;
-}
-
-.album-cover > img{
-	width: 256px;
-	border-radius: 10px;
-	box-shadow: 0px 0px 12px rgba(255,255,255,5);
-}
-*/
-
+/*			Hello on 12 languages			*/
 #hello {
 	/*display: block;
 	text-align: center;*/
