--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	
 }
 
 a {
@@ -18,6 +18,7 @@ a {
 		min-width: 320px;
 		padding-top: 20px;
 		background-color: #fff;
+		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	}
 
 	pre {
@@ -48,6 +49,16 @@ a {
 		min-width: 320px;
 		max-width: 100%;
 	}*/
+	
+	footer {
+		background-color: #e6e6e6;
+		padding-top: 10px;
+		text-align: center;
+		padding-bottom: 20px;
+		position: fixed;
+		bottom: 0;
+		width: 100%;
+	}
 }
 
 /*			Desktop			*/
@@ -59,11 +70,14 @@ a {
 		left: 50%;
 		margin-right: -50%;
 		transform: translate(-50%, -50%);
-		width: 600px;
+		width: 800px;
+		height: 600px;
+		background-image: url(/window.png);
+		background-repeat: no-repeat;
 		margin-left: auto;
 		margin-right: auto;
 		background-color: #ffffff;
-		border-radius: 12px;
+		/*border-radius: 12px;*/
 		margin-bottom: 2.3vw;
 		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
 	}
@@ -74,16 +88,11 @@ a {
 		width: 500px;
 	}
 
-	pre {
-		padding-top: 12px;
-		border-radius: 10px;
-		background: linear-gradient(90deg, rgb(218, 123, 143) 0%,rgb(228, 174, 73) 100%);
-		color: white;
-		font-size: 17.7px;
-	}
-
 	#gradienttop {
-		padding-top: 12px;
+
+		display: none;
+
+		padding-top: 10px;
 		border-radius: 10px 10px 0 0;
 		background: linear-gradient(90deg, rgb(218, 123, 143) 0%,rgb(228, 174, 73) 100%);
 		color: white;
@@ -92,6 +101,9 @@ a {
 	}
 
 	#gradientmiddle {
+
+		display: none;
+
 		/*border-radius: 10px 10px 0 0;*/
 		background: linear-gradient(90deg, rgb(218, 123, 143) 0%,rgb(228, 174, 73) 100%);
 		color: white;
@@ -100,7 +112,17 @@ a {
 	}
 
 	footer {
-		border-radius: 0 0 12px 12px;
+		padding-top: 10px;
+		text-align: center;
+		padding-bottom: 20px;
+		position: fixed;
+		bottom: 0;
+		width: 100%;
+		/*border-radius: 0 0 12px 12px;*/
+	}
+
+	header {
+		margin-top: 15px;
 	}
 }
 
@@ -154,14 +176,6 @@ body {
 
 #block {
 	padding: 20px 20px 20px 20px;
-}
-
-/*			footer			*/
-footer {
-	background-color: #e6e6e6;
-	padding-top: 10px;
-	text-align: center;
-	padding-bottom: 20px;
 }
 
 /*			Hello on 12 languages			*/
