--- a/main.css
+++ b/main.css
@@ -126,12 +126,7 @@ a {
 	}
 }
 
-header > h1{
-	padding-left: 20px;
-	/*font-weight: bold;*/
-	color: #202124;
-}
-
+/*			Body			*/
 body {
 	/*background: url(bg.jpg);
   	background-size: cover;
@@ -143,53 +138,4 @@ body {
 	background-color: #202124;
 	background: linear-gradient(90deg, #4b3136 0%,#423a2b 100%);*/
 	background-color: #dce1e6;
-}
-
-.container > ul{
-	padding-left: 20px;
-	margin-left: 40px;
-}
-
-.container > p, li {
-	padding-top: 2px;
-	padding-left: 30px;
-	color: #5f6368;
-}
-
-.container > h3{
-	padding-left: 20px;
-}
-
-/*			block			*/
-#block > h4{
-	padding-left: 55px;
-}
-
-#block > h1{
-	text-align: center;
-	margin-bottom: 20px;
-}
-
-#block > h3{
-	padding-left: 20px;
-}
-
-#block {
-	padding: 20px 20px 20px 20px;
-}
-
-/*			Hello on 12 languages			*/
-#hello {
-	/*display: block;
-	text-align: center;*/
-	text-align: center;
-}
-
-#hello > img {
-	width: 72%;
-}
-
-#hello > strong {
-	display: block;
-	margin: 0 24px 0 24px;
 }
