--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 
 a {
 	text-decoration: none;
-	color: #5f6368;
+	color: #76a1d6;
 }
 
 /*			Mobile			*/
@@ -20,19 +20,35 @@ a {
 		background-color: white;
 	}
 
+	.content {
+		height:auto !important;
+		min-height:100%;
+	}
+
 	.content p, h2, h3 {
 		margin: 20px;
 	}
 
+	.content h2 {
+		text-align: center;
+	}
+
+	.content img {
+		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
+		display:block;
+		margin:auto;
+	}
+
 	footer {
+		margin-top: 45px;
 		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
 		width: 100%;
 		height: 32px;
 		background-color: #eeeeee;
 		padding: 15px 0 10px 0;
 		text-align: center;
-		position: fixed;
-		bottom: 0;
+		/*position: fixed;
+		bottom: 0;*/
 	}
 
 	header {
@@ -89,8 +105,29 @@ a {
 		background-color: white;
 	}
 
-	.content p, h2, h3 {
+	.content {
+		margin: auto;
+		max-width: 800px;
+	}
+
+	.content h2 {
 		margin: 20px;
+	}
+
+	.content p, h3 {
+		margin-left: 20px;
+		margin-right: 20px;
+		margin-bottom: 5px;
+	}
+
+	.content img {
+		width: 256px;
+		margin: 0 20px 0 20px;
+		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
+	}
+
+	#floated {
+		float: left;
 	}
 
 	footer {
