--- a/main.css
+++ b/main.css
@@ -25,12 +25,16 @@ a {
 		min-height:100%;
 	}
 
-	.content p, h2, h3 {
-		margin: 20px;
+	.content p, h3 {
+		margin-left: 20px;
+		margin-right: 20px;
+		margin-top: 5px;
 	}
 
 	.content h2 {
 		text-align: center;
+		margin: 20px;
+		/*margin: 20px 0 20px 0;*/
 	}
 
 	.content img {
@@ -117,11 +121,11 @@ a {
 	.content p, h3 {
 		margin-left: 20px;
 		margin-right: 20px;
-		margin-bottom: 5px;
+		margin-top: 5px;
 	}
 
 	.content img {
-		width: 256px;
+		width: 280px;
 		margin: 0 20px 0 20px;
 		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
 	}
