--- a/main.css
+++ b/main.css
@@ -10,11 +10,17 @@ a {
 	color: #76a1d6;
 }
 
+body {
+	font-family: Helvetica,Arial,sans-serif;
+	line-height: 1.5;
+	font-weight: 300;
+	color: #111;
+}
+
 /*			Mobile			*/
 @media screen and (max-width: 768px) {
 	body {
-		font-size: 130%;		
-		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		font-size: 130%;
 		width: 100%;
 		height: 100%;
 		background-color: white;
@@ -40,19 +46,42 @@ a {
 	.content img {
 		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
 		display:block;
-		margin:auto;
+		margin: 20px auto 20px auto;
 	}
 
 	footer {
-		margin-top: 45px;
-		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
-		width: 100%;
-		height: 32px;
-		background-color: #eeeeee;
-		padding: 15px 0 10px 0;
 		text-align: center;
-		/*position: fixed;
-		bottom: 0;*/
+		padding: 15px 30px 10px 30px;
+		border-top: 1px solid #e8e8e8;
+		margin-top: 45px;
+	}
+
+	footer li a {
+		display: block;
+		text-decoration: none;
+	}
+
+	footer ul {
+		list-style-type: none;
+		padding: 0;
+		list-style: none;
+	    display: inline-block;
+    	text-align: left;
+	}
+
+	footer li {
+		float: left;
+	}
+
+	.icon>svg {
+		margin-left: 10px;
+		width: 16px;
+		height: 16px;
+		vertical-align: middle;
+	}
+
+	.username {
+		margin-left: 6px;
 	}
 
 	header {
@@ -67,43 +96,42 @@ a {
 	}
 
 /*			navbar			*/
-	ul {
+	header ul {
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
 		overflow: hidden;
-	  }
-	  
-	  li {
+	}
+	
+	header li {
 		float: left;
-	  }
-	  
-	  li a {
+	}
+	
+	header li a {
 		display: block;
 		color: black;
 		text-align: center;
 		padding: 14px 16px;
 		text-decoration: none;
-	  }
-	  
-	  /*li a:hover:not(.active) {
+	}
+	
+	/*li a:hover:not(.active) {
 		background-color: #111;
-	  }*/
-	  
-	  .active {
+	}*/
+	
+	header .active {
 		background-color: #e2e2e2;
-	  }
+	}
 
-	  li a:hover:not(.active) {
+	header li a:hover:not(.active) {
 		background-color: #eeeeee;
-	  }
+	}
 }
 
 /*			Desktop			*/
 @media screen and (min-width: 769px) {
 	body {
-		font-size: 100%;		
-		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		font-size: 100%;
 		width: 100%;
 		height: 100%;
 		background-color: white;
@@ -111,7 +139,7 @@ a {
 
 	.content {
 		margin: auto;
-		max-width: 800px;
+		max-width: 768px;
 	}
 
 	.content h2 {
@@ -125,7 +153,7 @@ a {
 	}
 
 	.content img {
-		width: 280px;
+		width: 300px;
 		margin: 0 20px 0 20px;
 		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
 	}
@@ -135,14 +163,38 @@ a {
 	}
 
 	footer {
-		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
-		width: 100%;
-		height: 32px;
-		background-color: #eeeeee;
-		padding: 15px 0 10px 0;
 		text-align: center;
-		position: fixed;
-		bottom: 0;
+		padding: 15px 30px 10px 30px;
+		border-top: 1px solid #e8e8e8;
+		margin-top: 45px;
+	}
+
+	footer li a {
+		display: block;
+		text-decoration: none;
+	}
+
+	footer ul {
+		list-style-type: none;
+		padding: 0;
+		list-style: none;
+	    display: inline-block;
+    	text-align: left;
+	}
+
+	footer li {
+		float: left;
+	}
+
+	.icon>svg {
+		margin-left: 10px;
+		width: 16px;
+		height: 16px;
+		vertical-align: middle;
+	}
+
+	.username {
+		margin-left: 6px;
 	}
 
 	header {
@@ -156,34 +208,34 @@ a {
 	}
 
 /*			navbar			*/
-	ul {
+	header ul {
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
 		overflow: hidden;
-	  }
+	}
 	  
-	  li {
+	header li {
 		float: left;
-	  }
+	}
 	  
-	  li a {
+	header li a {
 		display: block;
 		color: black;
 		text-align: center;
 		padding: 14px 16px;
 		text-decoration: none;
-	  }
+	}
 	  
-	  /*li a:hover:not(.active) {
+	/*li a:hover:not(.active) {
 		background-color: #111;
-	  }*/
+	}*/
 	  
-	  .active {
+	header .active {
 		background-color: #e2e2e2;
-	  }
+	}
 
-	  li a:hover:not(.active) {
+	header li a:hover:not(.active) {
 		background-color: #eeeeee;
-	  }
+	}
 }
