--- a/main.css
+++ b/main.css
@@ -27,8 +27,7 @@ body {
 	}
 
 	.content {
-		height:auto !important;
-		min-height:100%;
+		min-height: 100vh;
 	}
 
 	.content p, h3 {
@@ -140,6 +139,7 @@ body {
 	.content {
 		margin: auto;
 		max-width: 768px;
+		min-height: 100vh;
 	}
 
 	.content h2 {
@@ -166,7 +166,6 @@ body {
 		text-align: center;
 		padding: 15px 30px 10px 30px;
 		border-top: 1px solid #e8e8e8;
-		margin-top: 45px;
 	}
 
 	footer li a {
