--- a/main.css
+++ b/main.css
@@ -139,7 +139,7 @@ body {
 	.content {
 		margin: auto;
 		max-width: 768px;
-		min-height: 100vh;
+		/*min-height: 100vh;*/
 	}
 
 	.content h2 {
@@ -166,6 +166,7 @@ body {
 		text-align: center;
 		padding: 15px 30px 10px 30px;
 		border-top: 1px solid #e8e8e8;
+		margin-top: 45px;
 	}
 
 	footer li a {
@@ -237,4 +238,32 @@ body {
 	header li a:hover:not(.active) {
 		background-color: #eeeeee;
 	}
+}
+
+/*			loading			*/
+
+header a {
+	color: #111;
+}
+
+#loading {
+	position: fixed;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	text-align: center;
+	background-color: #fff;
+	z-index: 99;
+}
+
+#loading-image {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
+	z-index: 100;
 }
