--- a/main.css
+++ b/main.css
@@ -1,8 +1,10 @@
 /*			Root			*/
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
-	
+	font-family: 'Noto Sans', sans-serif;
 }
 
 a {
@@ -10,20 +12,23 @@ a {
 	color: #76a1d6;
 }
 
+a:hover {
+	cursor: pointer;
+}
+
+/*			Toggle Dark			*/
+
 body {
-	font-family: Helvetica,Arial,sans-serif;
-	line-height: 1.5;
-	font-weight: 300;
 	color: #111;
+	background-color: #fff;
 }
 
 /*			Mobile			*/
 @media screen and (max-width: 768px) {
 	body {
-		font-size: 130%;
+		font-size: 110%;
 		width: 100%;
 		height: 100%;
-		background-color: white;
 	}
 
 	.content {
@@ -133,7 +138,6 @@ body {
 		font-size: 100%;
 		width: 100%;
 		height: 100%;
-		background-color: white;
 	}
 
 	.content {
@@ -153,7 +157,7 @@ body {
 	}
 
 	.content img {
-		width: 300px;
+		width: 350px;
 		margin: 0 20px 0 20px;
 		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
 	}
