--- a/main.css
+++ b/main.css
@@ -16,11 +16,21 @@ a:hover {
 	cursor: pointer;
 }
 
-/*			Toggle Dark			*/
-
 body {
-	color: #111;
-	background-color: #fff;
+	background-color: #1f1f1f;
+	color: #fff;
+}
+
+/* color: #111;
+background-color: #fff; */
+
+header h1 a {
+	font-weight: bold;
+	color: #e2e2e2;
+}
+
+header {
+	background-color: #111;
 }
 
 /*			Mobile			*/
@@ -31,32 +41,35 @@ body {
 		height: 100%;
 	}
 
-	.content {
+	div.content {
 		min-height: 100vh;
 	}
 
-	.content p, h3 {
-		margin-left: 20px;
-		margin-right: 20px;
+	div.content p, h3 {
+		margin-left: 30px;
+		margin-right: 30px;
 		margin-top: 5px;
 	}
 
-	.content h2 {
+	div.content h2 {
 		text-align: center;
 		margin: 20px;
 		/*margin: 20px 0 20px 0;*/
 	}
 
-	.content img {
+	div.block img {
+		width: 72%;
 		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
 		display:block;
 		margin: 20px auto 20px auto;
+		border-radius: 10px;
 	}
 
 	footer {
 		text-align: center;
-		padding: 15px 30px 10px 30px;
-		border-top: 1px solid #e8e8e8;
+		padding: 20px 30px 30px 30px;
+		/* border-top: 1px solid #e8e8e8; */
+		border-top: 1px solid #303030;
 		margin-top: 45px;
 	}
 
@@ -92,7 +105,7 @@ body {
 		text-align: center;
 		backdrop-filter: blur(10px);
 		width: 100%;
-		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
+		/* box-shadow: 0px 0px 24px rgba(0,0,0,0.2); */
 	}
 
 	header h1 {
@@ -113,7 +126,8 @@ body {
 	
 	header li a {
 		display: block;
-		color: black;
+		/* color: black; */
+		color: #e2e2e2;
 		text-align: center;
 		padding: 14px 16px;
 		text-decoration: none;
@@ -124,11 +138,14 @@ body {
 	}*/
 	
 	header .active {
-		background-color: #e2e2e2;
+		/* background-color: #e2e2e2; */
+		background-color: #1f1f1f;
+		border-radius: 10px 10px 0 0;
 	}
 
 	header li a:hover:not(.active) {
-		background-color: #eeeeee;
+		/* background-color: #eeeeee; */
+		color: #76a1d6;
 	}
 }
 
@@ -140,26 +157,27 @@ body {
 		height: 100%;
 	}
 
-	.content {
+	div.content {
 		margin: auto;
 		max-width: 768px;
 		/*min-height: 100vh;*/
 	}
 
-	.content h2 {
+	div.content h2 {
 		margin: 20px;
 	}
 
-	.content p, h3 {
+	div.content p, h3 {
 		margin-left: 20px;
 		margin-right: 20px;
 		margin-top: 5px;
 	}
 
-	.content img {
+	div.content img {
 		width: 350px;
 		margin: 0 20px 0 20px;
 		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
+		border-radius: 10px;
 	}
 
 	#floated {
@@ -168,8 +186,9 @@ body {
 
 	footer {
 		text-align: center;
-		padding: 15px 30px 10px 30px;
-		border-top: 1px solid #e8e8e8;
+		padding: 20px 30px 30px 30px;
+		/* border-top: 1px solid #e8e8e8; */
+		border-top: 1px solid #303030;
 		margin-top: 45px;
 	}
 
@@ -204,7 +223,7 @@ body {
 	header {
 		backdrop-filter: blur(10px);
 		width: 100%;
-		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
+		/* box-shadow: 0px 0px 24px rgba(0,0,0,0.2); */
 	}
 
 	header h1 {
@@ -225,7 +244,8 @@ body {
 	  
 	header li a {
 		display: block;
-		color: black;
+		/* color: black; */
+		color: #e2e2e2;
 		text-align: center;
 		padding: 14px 16px;
 		text-decoration: none;
@@ -236,24 +256,27 @@ body {
 	}*/
 	  
 	header .active {
-		background-color: #e2e2e2;
+		/* background-color: #e2e2e2; */
+		background-color: #1f1f1f;
+		border-radius: 10px 10px 0 0;
 	}
 
 	header li a:hover:not(.active) {
-		background-color: #eeeeee;
+		/* background-color: #eeeeee; */
+		color: #76a1d6;
 	}
+}
+
+/*			block			*/
+
+div.block {
+	min-height: 350px;
+	padding-top: 1px;
+	padding-bottom: 25px;
 }
 
 header a {
 	color: #111;
-}
-
-#downloads {
-	text-align: center;
-}
-
-#downloads img {
-	margin: 20px;
 }
 
 /*			loading			*/
