--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: 'Noto Sans', sans-serif;
+	box-sizing: border-box;
 }
 
 a {
@@ -21,19 +22,7 @@ body {
 	color: #fff;
 }
 
-/* color: #111;
-background-color: #fff; */
-
-header h1 a {
-	font-weight: bold;
-	color: #e2e2e2;
-}
-
-header {
-	background-color: #111;
-}
-
-/*			Mobile			*/
+/*			Mobile			
 @media screen and (max-width: 768px) {
 	body {
 		font-size: 110%;
@@ -54,7 +43,7 @@ header {
 	div.content h2 {
 		text-align: center;
 		margin: 20px;
-		/*margin: 20px 0 20px 0;*/
+		/*margin: 20px 0 20px 0;
 	}
 
 	div.block img {
@@ -68,7 +57,7 @@ header {
 	footer {
 		text-align: center;
 		padding: 20px 30px 30px 30px;
-		/* border-top: 1px solid #e8e8e8; */
+		/* border-top: 1px solid #e8e8e8;
 		border-top: 1px solid #303030;
 		margin-top: 45px;
 	}
@@ -105,49 +94,28 @@ header {
 		text-align: center;
 		backdrop-filter: blur(10px);
 		width: 100%;
-		/* box-shadow: 0px 0px 24px rgba(0,0,0,0.2); */
+		/* box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
 	}
 
 	header h1 {
 		padding: 20px;
 	}
-
-/*			navbar			*/
-	header ul {
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-	}
-	
-	header li {
-		float: left;
-	}
-	
-	header li a {
-		display: block;
-		/* color: black; */
-		color: #e2e2e2;
-		text-align: center;
-		padding: 14px 16px;
-		text-decoration: none;
-	}
 	
 	/*li a:hover:not(.active) {
 		background-color: #111;
-	}*/
+	}
 	
 	header .active {
-		/* background-color: #e2e2e2; */
+		/* background-color: #e2e2e2;
 		background-color: #1f1f1f;
 		border-radius: 10px 10px 0 0;
 	}
 
 	header li a:hover:not(.active) {
-		/* background-color: #eeeeee; */
+		/* background-color: #eeeeee;
 		color: #76a1d6;
 	}
-}
+} */
 
 /*			Desktop			*/
 @media screen and (min-width: 769px) {
@@ -158,125 +126,125 @@ header {
 	}
 
 	div.content {
-		margin: auto;
-		max-width: 768px;
-		/*min-height: 100vh;*/
+		width: 100%;
 	}
 
-	div.content h2 {
-		margin: 20px;
-	}
-
-	div.content p, h3 {
+	div.block h2 {
 		margin-left: 20px;
-		margin-right: 20px;
-		margin-top: 5px;
 	}
 
-	div.content img {
-		width: 350px;
-		margin: 0 20px 0 20px;
+	div.block p, h3 {
+		margin-left: 20px;
+	}
+
+	div.block img {	
+		width: 320px;
+		margin: 20px;
 		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
-		border-radius: 10px;
+		border-radius: 12px;
 	}
 
 	#floated {
-		float: left;
-	}
-
-	footer {
-		text-align: center;
-		padding: 20px 30px 30px 30px;
-		/* border-top: 1px solid #e8e8e8; */
-		border-top: 1px solid #303030;
-		margin-top: 45px;
-	}
-
-	footer li a {
-		display: block;
-		text-decoration: none;
-	}
-
-	footer ul {
-		list-style-type: none;
-		padding: 0;
-		list-style: none;
-	    display: inline-block;
-    	text-align: left;
-	}
-
-	footer li {
-		float: left;
-	}
-
-	.icon>svg {
-		margin-left: 10px;
-		width: 16px;
-		height: 16px;
-		vertical-align: middle;
-	}
-
-	.username {
-		margin-left: 6px;
+		float: right;
 	}
 
 	header {
-		backdrop-filter: blur(10px);
-		width: 100%;
+		background-color: #2b2b2b;
+		height: 40%;
+		/*backdrop-filter: blur(50px);*/
 		/* box-shadow: 0px 0px 24px rgba(0,0,0,0.2); */
 	}
 
-	header h1 {
-		padding: 20px;
-	}
-
-/*			navbar			*/
-	header ul {
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-	}
-	  
-	header li {
-		float: left;
-	}
-	  
-	header li a {
-		display: block;
-		/* color: black; */
+	header a{
+		font-size: 3rem;
+		position: absolute;
+		top: 20%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		white-space: nowrap;
+		font-weight: bold;
 		color: #e2e2e2;
-		text-align: center;
-		padding: 14px 16px;
-		text-decoration: none;
-	}
-	  
-	/*li a:hover:not(.active) {
-		background-color: #111;
-	}*/
-	  
-	header .active {
-		/* background-color: #e2e2e2; */
-		background-color: #1f1f1f;
-		border-radius: 10px 10px 0 0;
-	}
-
-	header li a:hover:not(.active) {
-		/* background-color: #eeeeee; */
-		color: #76a1d6;
 	}
 }
 
 /*			block			*/
 
 div.block {
-	min-height: 350px;
-	padding-top: 1px;
-	padding-bottom: 25px;
+	padding: 20px;
+	min-height: 400px;
 }
 
-header a {
-	color: #111;
+.blk {
+	float: left;
+	width: 70%;
+	padding: 20px;
+	min-height: 400px;
+}
+
+.blk-img {
+	position: relative;
+	float: right;
+	width: 30%;
+	padding: 20px;
+	min-height: 400px;
+}
+
+.blk-img img {
+	box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
+	border-radius: 12px;
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+  
+.clearfix::after {
+	content: "";
+	clear: both;
+	display: table;
+}
+
+/*			footer			*/
+
+footer {
+	text-align: center;
+	padding: 20px 30px 30px 30px;
+	border-top: 1px solid #303030;
+}
+
+footer li a {
+	display: block;
+	text-decoration: none;
+}
+
+footer ul {
+	list-style-type: none;
+	padding: 0;
+	list-style: none;
+	display: inline-block;
+	text-align: left;
+}
+
+footer li {
+	float: left;
+}
+
+
+.icon>svg {
+	margin-left: 10px;
+	width: 16px;
+	height: 16px;
+	vertical-align: middle;
+}
+
+.username {
+	margin-left: 6px;
 }
 
 /*			loading			*/
