--- a/main.css
+++ b/main.css
@@ -1,221 +1,46 @@
-/*			Root			*/
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
-
 * {
-	margin: 0;
-	padding: 0;
-	font-family: 'Noto Sans', sans-serif;
-	box-sizing: border-box;
-}
-
-a {
-	text-decoration: none;
-	color: #76a1d6;
-}
-
-a:hover {
-	cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-	background-color: #1f1f1f;
-	color: #fff;
+    font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/*			Mobile			
-@media screen and (max-width: 768px) {
-	body {
-		font-size: 110%;
-		width: 100%;
-		height: 100%;
-	}
-
-	div.content {
-		min-height: 100vh;
-	}
-
-	div.content p, h3 {
-		margin-left: 30px;
-		margin-right: 30px;
-		margin-top: 5px;
-	}
-
-	div.content h2 {
-		text-align: center;
-		margin: 20px;
-		/*margin: 20px 0 20px 0;
-	}
-
-	div.block img {
-		width: 72%;
-		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
-		display:block;
-		margin: 20px auto 20px auto;
-		border-radius: 10px;
-	}
-
-	footer {
-		text-align: center;
-		padding: 20px 30px 30px 30px;
-		/* border-top: 1px solid #e8e8e8;
-		border-top: 1px solid #303030;
-		margin-top: 45px;
-	}
-
-	footer li a {
-		display: block;
-		text-decoration: none;
-	}
-
-	footer ul {
-		list-style-type: none;
-		padding: 0;
-		list-style: none;
-	    display: inline-block;
-    	text-align: left;
-	}
-
-	footer li {
-		float: left;
-	}
-
-	.icon>svg {
-		margin-left: 10px;
-		width: 16px;
-		height: 16px;
-		vertical-align: middle;
-	}
-
-	.username {
-		margin-left: 6px;
-	}
-
-	header {
-		text-align: center;
-		backdrop-filter: blur(10px);
-		width: 100%;
-		/* box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
-	}
-
-	header h1 {
-		padding: 20px;
-	}
-	
-	/*li a:hover:not(.active) {
-		background-color: #111;
-	}
-	
-	header .active {
-		/* background-color: #e2e2e2;
-		background-color: #1f1f1f;
-		border-radius: 10px 10px 0 0;
-	}
-
-	header li a:hover:not(.active) {
-		/* background-color: #eeeeee;
-		color: #76a1d6;
-	}
-} */
-
-/*			Desktop			
-@media screen and (min-width: 769px) {*/
-	body {
-		font-size: 100%;
-		width: 100%;
-		height: 100%;
-	}
-
-	div.content {
-		width: 100%;
-	}
-
-	div.block h2 {
-		margin-left: 20px;
-	}
-
-	div.block p h3 {
-		margin-left: 20px;
-	}
-
-	div.block img {	
-		width: 320px;
-		margin: 20px;
-		box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
-		border-radius: 12px;
-	}
-
-	#floated {
-		float: right;
-	}
-
-	header {
-		background-color: #2b2b2b;
-		height: 40%;
-		/*backdrop-filter: blur(50px);*/
-		/* box-shadow: 0px 0px 24px rgba(0,0,0,0.2); */
-	}
-
-	header a{
-		font-size: 3rem;
-		position: absolute;
-		top: 20%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		white-space: nowrap;
-		font-weight: bold;
-		color: #e2e2e2;
-	}
-
-
-/*			block			*/
-
-div.block {
-	padding: 20px;
-	min-height: 400px;
+a {
+    text-decoration: none;
+    color: #76a1d6;
 }
 
-.blk {
-	float: left;
-	width: 70%;
-	padding: 20px;
-	min-height: 400px;
+#sad {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    margin: 0 auto 24px;
+    background: transparent url(/sad.jpg) no-repeat 50%/cover;
 }
 
-.blk-img {
-	position: relative;
-	float: right;
-	width: 30%;
-	padding: 20px;
-	min-height: 400px;
-}
-
-.blk-img img {
-	box-shadow: 0px 0px 24px rgba(0,0,0,0.2);
-	border-radius: 12px;
-    max-height: 100%;
-    max-width: 100%;
-    width: auto;
-    height: auto;
+.layout {
+    background: #fff;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+}
+
+#title {
+    font-size: 30px;
+    font-weight: 700;
+    color: #2c2d2e;
+    text-align: center;
+    line-height: 34px;
+    max-width: 360px;
     margin: auto;
 }
-  
-.clearfix::after {
-	content: "";
-	clear: both;
-	display: table;
-}
-
-/*			footer			*/
 
 footer {
 	text-align: center;
-	padding: 20px 30px 30px 30px;
-	border-top: 1px solid #303030;
 }
 
 footer li a {
@@ -245,28 +70,4 @@ footer li {
 
 .username {
 	margin-left: 6px;
-}
-
-/*			loading			*/
-
-#loading {
-	position: fixed;
-	display: flex;
-	align-items: center;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	text-align: center;
-	background-color: #fff;
-	z-index: 99;
-}
-
-#loading-image {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-right: -50%;
-	transform: translate(-50%, -50%);
-	z-index: 100;
 }
