--- a/main.css
+++ b/main.css
@@ -35,6 +35,11 @@ a {
     background: transparent url(/sad.jpg) no-repeat 50%/cover;
 }
 
+#sad:hover {
+    width: 95px;
+    height: 95px;
+}
+
 .layout {
     min-height: calc(100vh - 50px);
 }
@@ -56,6 +61,10 @@ a {
     line-height: 34px;
     max-width: 360px;
     margin: auto;
+}
+
+#title:hover {
+    font-size: 32px;
 }
 
 footer {
