--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 a {
